@@ -1,3 +1,6 @@
+2006-08-20  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadGedcom.py: fix CHAN parsing for family
+
 2006-08-20  Brian Matherly  <brian@gramps-project.org>
 	* src/plugins/EventCmp.py: improve Date/Place display (#0000226)
 
